--- a/vignettes/api.Rmd
+++ b/vignettes/api.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(eval = FALSE)
 
 `sevenbridges` is an R/Bioconductor package that provides an interface for Seven Bridges public API. The supported platforms includes the [Seven Bridges Platform](https://igor.sbgenomics.com/), [Cancer Genomics Cloud (CGC)](https://www.cancergenomicscloud.org), and [Cavatica](https://cavatica.sbgenomics.com).
 
-Learn more from our documentation on the [Seven Bridges Platform](http://docs.sevenbridges.com/page/api) and the [Cancer Genomics Cloud (CGC)](http://docs.cancergenomicscloud.org/v1.0/page/the-cgc-api).
+Learn more from our documentation on the [Seven Bridges Platform](https://docs.sevenbridges.com/page/api) and the [Cancer Genomics Cloud (CGC)](http://docs.cancergenomicscloud.org/v1.0/page/the-cgc-api).
 
 <div align="right"><a href="#top">top</a></div>
 
@@ -34,7 +34,7 @@ Learn more from our documentation on the [Seven Bridges Platform](http://docs.se
 
 The `sevenbridges` package only supports v2+ versions of the API, since versions prior to V2 are not compatible with the Common Workflow Language (CWL). This package provides a simple interface for accessing and trying out various methods.
 
-There are two ways of constructing API calls. For instance, you can use low-level API calls which use arguments like `path`, `query`, and `body`. These are documented in the API reference libraries for the [Seven Bridges Platform](http://docs.sevenbridges.com/reference#list-all-api-paths) and the [CGC](http://docs.cancergenomicscloud.org/docs/new-1). An example of a low-level request to "list all projects" is shown below. In this request, you can also pass `query` and `body` as a list.
+There are two ways of constructing API calls. For instance, you can use low-level API calls which use arguments like `path`, `query`, and `body`. These are documented in the API reference libraries for the [Seven Bridges Platform](https://docs.sevenbridges.com/reference#list-all-api-paths) and the [CGC](http://docs.cancergenomicscloud.org/docs/new-1). An example of a low-level request to "list all projects" is shown below. In this request, you can also pass `query` and `body` as a list.
 
 ```{r}
 library("sevenbridges")
@@ -125,7 +125,7 @@ For more details about how to use the API client in R, please consult the [Seven
 
 ## Create `Auth` Object
 
-Before you can access your account via the API, you have to provide your credentials. You can obtain your credentials in the form of an ["authentication token"](http://docs.sevenbridges.com/v1.0/docs/get-your-authentication-token) from the **Developer Tab** under **Account Settings** on the visual interface. Once you've obtained this, create an `Auth` object so it remembers your authentication token and the path for the API. All subsequent requests will draw upon these two pieces of information.
+Before you can access your account via the API, you have to provide your credentials. You can obtain your credentials in the form of an ["authentication token"](https://docs.sevenbridges.com/v1.0/docs/get-your-authentication-token) from the **Developer Tab** under **Account Settings** on the visual interface. Once you've obtained this, create an `Auth` object so it remembers your authentication token and the path for the API. All subsequent requests will draw upon these two pieces of information.
 
 Let's load the package first:
 
@@ -680,7 +680,7 @@ The `sevenbridges` package provides a user-friendly interface so you do not have
 
 Before you can interact with the API, you need to construct an `Auth` object which stores the following information:
 
-- Your authentication token. This is used to authenticate your credentials with the API. Learn more about obtaining your authentication token on the [Seven Bridges Platform](http://docs.sevenbridges.com/v1.0/docs/get-your-authentication-token) and the [Cancer Genomics Cloud](http://docs.cancergenomicscloud.org/v1.0/docs/get-your-authentication-token). The approach for obtaining the authentication token also applies to the other Seven Bridges platforms.
+- Your authentication token. This is used to authenticate your credentials with the API. Learn more about obtaining your authentication token on the [Seven Bridges Platform](https://docs.sevenbridges.com/v1.0/docs/get-your-authentication-token) and the [Cancer Genomics Cloud](http://docs.cancergenomicscloud.org/v1.0/docs/get-your-authentication-token). The approach for obtaining the authentication token also applies to the other Seven Bridges platforms.
 - The path for the API (base URL).
 - The platform name you are using (e.g. Seven Bridges Platform on AWS US, Seven Bridges Platform on AWS EU, Seven Bridges Platform on GCP, Cancer Genomics Cloud, or Cavatica). This is an optional field, as the base URL of the API ultimately decides where the API calls will be sent to. This field will only be blank when the URL was directly provided and the platform name could not be inferred from that URL.
 
@@ -817,15 +817,15 @@ a$api()
 
 <div align="right"><a href="#top">top</a></div>
 
-## Offset, Limit, and Search
+## Offset, Limit, Search, and Advance Access Features
 
-Before we start, keep in mind the following:
+### `offset` and `limit`
 
-__`offset` and `limit`__
+Every API call accepts two arguments named `offset` and `limit`.
 
-Every API call accept arguments called `offset` and `limit`.
-<ul><li>Offset defines where the retrieved items started.</li>
-<li>Limit defines the quantity of items you want to get.</li></ul>
+- `offset` defines where the retrieved items started.
+- `limit` defines the quantity of items you want to get.
+
 By default, `offset` is set to `0` and `limit` is set to `50`. As such, your API request returns the __first 100 items__ when you list items or search for items by name. To search and list all items, use `complete = TRUE` in your API request.
 
 ```{r}
@@ -833,11 +833,15 @@ getOption("sevenbridges")$offset
 getOption("sevenbridges")$limit
 ```
 
-__Search by ID__
+<div align="right"><a href="#top">top</a></div>
+
+### Search by ID
 
 When searching by ID, your request will return your exact resource as it is unique. As such, you do not have to manually set `offset` and `limit`. It is a good practice to find your resources by their ID and pass this ID as an input to your task. You can find a resource's ID in the final part of the URL on the visual interface or via the API requests to list resources or get a resource's details.
 
-__Search by name__
+<div align="right"><a href="#top">top</a></div>
+
+### Search by name
 
 Search by name returns all partial matches unless you specify `exact = TRUE`. This type of search will only search across current pulled content, so use `complete = TRUE` if you want to search across everything.
 
@@ -861,9 +865,102 @@ a$app(visibility = "public", name = "bed converter", complete = TRUE)
 
 <div align="right"><a href="#top">top</a></div>
 
+### Experiment with Advance Access features
+
+Similar to `offset` and `limit`, every API call accepts an argument named `advance_access`. This argument was first introduced in August 2017 and controls if a special field in the HTTP request header will be sent, which can enable the access to the "Advance Access" features in the Seven Bridges API. Note that the Advance Access features in the API are **not officially released yet**, therefore the API usages are subject to change, so please use with discretion.
+
+In addition to modifying each API call that uses Advance Access features, the option can be also set globally at the beginning of your API script. This offers a one-button switch for users who wants to experiment with the Advance Access features. The option is disabled by default:
+
+```{r}
+library("sevenbridges")
+getOption("sevenbridges")$advance_access
+```
+
+```
+## [1] FALSE
+```
+
+For example, the "folders" API is in Advance Access as of August, 2017. If we try to use the folders API to create a folder with the `advance_access` option disabled, it will return an error message:
+
+```{r}
+req = api(
+    token = "your_token", path = "files",
+    method = "POST", body = list(
+        "name" = "new-folder", "type" = "folder",
+        "project" = "owner/project"))
+
+httr::content(req)$"message"
+```
+
+```
+## [1] "Advance access feature needs X-SBG-Advance-Access: advance header."
+```
+
+To enable the Advance Access features, one can use
+
+```{r}
+opt = getOption("sevenbridges")
+opt$advance_access = TRUE
+options(sevenbridges = opt)
+```
+
+at the beginning of their scripts. Let's check if the option has been enabled:
+
+```{r}
+getOption("sevenbridges")$advance_access
+```
+
+```
+## [1] TRUE
+```
+
+Send the API call again:
+
+```{r}
+req = api(
+    token = "your_token", path = "files",
+    method = "POST", body = list(
+        "name" = "new-folder", "type" = "folder",
+        "project" = "owner/project"))
+```
+
+The information of the newly created folder will be returned:
+
+```{r}
+httr::content(req)
+```
+
+```
+## $href
+## [1] "https://api.sbgenomics.com/v2/files/{folder_id}"
+##
+## $id
+## [1] "folder_id"
+##
+## $name
+## [1] "new-folder"
+##
+## $project
+## [1] "owner/project"
+##
+## $parent
+## [1] "parent_folder_id"
+##
+## $type
+## [1] "folder"
+##
+## $created_on
+## [1] "2017-08-22T12:49:21Z"
+##
+## $modified_on
+## [1] "2017-08-22T12:49:21Z"
+```
+
+<div align="right"><a href="#top">top</a></div>
+
 ## Query Parameter `'fields'`
 
-Please read the documentation [detail](http://docs.sevenbridges.com/reference#section-general-api-information).
+Please read the documentation [detail](https://docs.sevenbridges.com/reference#section-general-api-information).
 
 All API calls take the optional query parameter fields. This parameter enables you
 to specify the fields you want to be returned when listing resources
@@ -1403,7 +1500,7 @@ p$upload("~/Documents/Data/sbgtest/1000G_phase1.snps.high_confidence.b37.vcf")
 
 #### Upload files via defined manifest file
 
-A manifest file is a file used to define metadata values for a set of files. It can be used when uploading files to the Platform to set their metadata.The supported file format for the manifest file is CSV, i.e. comma separated values. A CSV file contains a number of rows with columns which are separated with a comma. Format of manifest file is defined in the [documentaion online](http://docs.sevenbridges.com/docs/format-of-a-manifest-file)
+A manifest file is a file used to define metadata values for a set of files. It can be used when uploading files to the Platform to set their metadata.The supported file format for the manifest file is CSV, i.e. comma separated values. A CSV file contains a number of rows with columns which are separated with a comma. Format of manifest file is defined in the [documentaion online](https://docs.sevenbridges.com/docs/format-of-a-manifest-file)
 
 Some requirements:
 
@@ -1521,9 +1618,9 @@ fl$meta()
 
 ### Metadata operations
 
-Learn about metadata fields and their values for the relevant environment: [[Seven Bridges Platform](http://docs.sevenbridges.com/docs/metadata-on-the-seven-bridges-platform)] [[CGC](http://docs.cancergenomicscloud.org/v1.0/docs/metadata-for-private-data)].
+Learn about metadata fields and their values for the relevant environment: [[Seven Bridges Platform](https://docs.sevenbridges.com/docs/metadata-on-the-seven-bridges-platform)] [[CGC](http://docs.cancergenomicscloud.org/v1.0/docs/metadata-for-private-data)].
 
-Note that the name of a file is not the same as its ID. A file's ID is a hexadecimal string automatically assigned to a file in a project. The file's name is a human-readable string. For information, please see the API overview for the [Seven Bridges Platform](http://docs.sevenbridges.com/v1.0/docs/the-api) and for the [CGC](http://docs.cancergenomicscloud.org/docs/the-cgc-api).
+Note that the name of a file is not the same as its ID. A file's ID is a hexadecimal string automatically assigned to a file in a project. The file's name is a human-readable string. For information, please see the API overview for the [Seven Bridges Platform](https://docs.sevenbridges.com/v1.0/docs/the-api) and for the [CGC](http://docs.cancergenomicscloud.org/docs/the-cgc-api).
 
 **Get metadata**
 
@@ -1744,7 +1841,7 @@ Coming soon: converting apps to CWL objects
 
 To add a CWL object as an app, use the `app_add` function call for a `Project` object. The following two parameters are required:
 
-- `short_name`: Project short names are based on the name you give to a project when you create it. Learn more about project short names on the [Seven Bridges Platform](http://docs.sevenbridges.com/v1.0/docs/the-api#section-project-short-names) or the [CGC](http://docs.cancergenomicscloud.org/v1.0/docs/the-cgc-api#section-project-short-names).
+- `short_name`: Project short names are based on the name you give to a project when you create it. Learn more about project short names on the [Seven Bridges Platform](https://docs.sevenbridges.com/v1.0/docs/the-api#section-project-short-names) or the [CGC](http://docs.cancergenomicscloud.org/v1.0/docs/the-cgc-api#section-project-short-names).
 - `filename`: The name of the JSON file containing the CWL.
 
 ```{r}
@@ -1997,7 +2094,7 @@ Seven Bridges environments mediate access to these repositories using volumes. A
 
 A volume enables you to treat the cloud repository associated with it as external storage. You can 'import' files from the volume to your Seven Bridges environment to use them as inputs for computation. Similarly, you can write files from the Seven Bridges environment to your cloud storage by 'exporting' them to your volume.
 
-Learn more about volumes on the [Seven Bridges Platform](http://docs.sevenbridges.com/docs/connecting-cloud-storage-overview) and the [CGC](http://docs.cancergenomicscloud.org/docs/connect-cloud-storage-overview).
+Learn more about volumes on the [Seven Bridges Platform](https://docs.sevenbridges.com/docs/connecting-cloud-storage-overview) and the [CGC](http://docs.cancergenomicscloud.org/docs/connect-cloud-storage-overview).
 
 ### Create a volume
 
